syntax = "proto3";
package echo;

option go_package = "../echo";

service EchoServer {
	rpc Echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string response = 1;
}